--- a/src/tbar/tbar.css
+++ b/src/tbar/tbar.css
@@ -2,7 +2,7 @@
     
     width:100%;
     height:50px;
-  
+    padding:2rem;
     position: sticky;
     display: flex;
     align-items: center;
@@ -12,13 +12,54 @@
 
 
 
-.left,.right{
+.left{
     flex:3;
     width: 50px;
+
     
+    
+}
+.top-icons{
+    
+font-size: 30px;
+margin: 10px;
+cursor: pointer;
+color: #444;
+}
+.top-icon{
+    padding:0.75rem;
 }
 .centre{
    display:inline-block; 
   flex:6;
   style:none;
+}
+.top-img{
+    width:80px;
+    height: 75px;
+    border-radius: 50px;
+}
+.right{
+    flex:3;
+    width: 50px;
+    
+}
+
+.top-center-list{
+    display: flex;
+    list-style:none;
+    justify-content: center;
+    margin:0;
+    padding:0;
+
+}
+.top-center-list-item{
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 300;
+}
+.searchimg{
+    font-size: 18px;
+    color: grey;
 }
