--- a/src/sbar/sbar.css
+++ b/src/sbar/sbar.css
@@ -1,6 +1,68 @@
 .sbar{
     flex:3;
+    margin: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 18px;
+    background-color: rgb(230, 208, 208);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .sbar-img{
-    width:50px;
+    width:125px;
+    height: 125px;
+    
+    margin-top: 15px;
+}
+.sbar-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.sbar-title{
+    margin: 10px;
+    padding:5px;
+    border-top: solid #a7a4a4;
+    border-bottom: solid #a7a4a4;
+    width:80%;
+    text-align: center;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 13px;
+    color: #222;
+    font-weight:  600px;
+    line-height: 20px;
+}
+.sbar > p{
+    padding:30px;
+}
+
+.sbar-list{
+    list-style: none;
+    margin-bottom: 20px;
+    
+}
+.sbar-list-item{
+    font-family: 'Baskervville', serif;
+    display: inline-block;
+    width:50%;
+    margin-top: 15px;
+    cursor: pointer;
+}
+.sbar-social{
+    margin-top:15px;
+    width: 275px;;
+    display:flex;
+    padding-left: 10px;
+    align-items: center;
+    
+}
+.sbar-icon{
+    cursor: pointer;
+    width:30px;
+    height:30px;
+    padding:10px;
+    font-size: 35px;
 }
