--- a/src/sbar/sbar.css
+++ b/src/sbar/sbar.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height:fit-content;
 }
 .sbar-img{
     width:125px;
@@ -65,4 +66,7 @@
     height:30px;
     padding:10px;
     font-size: 35px;
+}
+.sbaritemfollow{
+    font-size: 20px;
 }
