--- a/src/post/post.css
+++ b/src/post/post.css
@@ -1,13 +1,10 @@
 .post {
-  flex:9;
   width: 385px;
   margin: 0px 25px 40px 25px;
-  display: flex;
-  flex-direction: column;
 }
 
 .postImg {
-  width: 385px;
+  width: 100%;
   height: 280px;
   object-fit: cover;
   border-radius: 7px;
