--- a/src/sbar/sbar.css
+++ b/src/sbar/sbar.css
@@ -1,15 +1,13 @@
 .sbar {
   flex: 3;
+  height: fit-content;
   margin: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 18px;
-  background-color: rgb(20, 88, 128);
+  padding-bottom: 30px;
+  background-color: #fdfbfb;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: fit-content;
 }
 .sbar-img {
   width: 125px;
@@ -49,7 +47,6 @@
   width: 50%;
   margin-top: 15px;
   cursor: pointer;
-  
 }
 .sbar-social {
   margin-top: 15px;
