--- a/src/singlePost/singlePost.css
+++ b/src/singlePost/singlePost.css
@@ -3,7 +3,9 @@
 }
 .singlePostWrapper {
   padding: 20px;
-  padding-right: 0px;
+  padding-right: 0;
+  display: flex;
+  flex-direction: column;
 }
 .singlePostImg {
   width: 100%;
