--- a/src/sbar/sbar.css
+++ b/src/sbar/sbar.css
@@ -3,7 +3,7 @@
   height: fit-content;
   margin: 20px;
   padding-bottom: 30px;
-  background-color: #fdfbfb;
+  background-color: #f9ffc6;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
